# hashconsing

./: .appveyor.yml  .gitignore  .travis.yml  CHANGES.md  Cargo.toml  README.md  readme.md  rust-toolchain.toml
.github/workflows/: CI.yml  ci.yml  rust.yml
benches/: throughput.rs  traversals.rs
hashconsing/: Cargo.toml
hashconsing-derive/: Cargo.toml
hashconsing-derive/src/: lib.rs
hashconsing/src/: hash_coll.rs  lib.rs  test.rs
hashconsing/src/hash_coll/: hashers.rs
hashconsing/src/test/: collect.rs
hashconsing/tests/: try_build.rs
hashconsing/tests/try_build/: issue_1.rs  issue_1.stderr
hashconsing_derive/: Cargo.toml
hashconsing_derive/src/: lib.rs
src/: alloc.rs  coll.rs  hash_coll.rs  lib.rs  main.rs  test.rs
src/hash_coll/: hashers.rs
src/test/: basic.rs  collect.rs  string.rs  weak.rs
tests/: lib.rs  send_sync.rs
tests/try_build/: issue_1.rs  issue_1.stderr
