[workspace]
members = [
    "hashconsing_derive",
]

resolver = "2"

[package]
name = "hashconsing"
version = "1.7.0"
authors = [
  "Adrien Champion <adrien.champion@email.com>",
  "Leni Aniva <aniva@stanford.edu>",
]
description = "A hash consing library."
documentation = "https://docs.rs/hashconsing"
homepage = "https://github.com/AdrienChampion/hashconsing"
repository = "https://github.com/AdrienChampion/hashconsing"
readme = "README.md"
categories = [
  "caching",
  "compression",
  "concurrency",
  "data-structures",
  "memory-management",
]
keywords = ["hashconsing", "hash", "consing", "sharing", "caching"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.60"

[package.metadata.docs.rs]
features = ["unstable_docrs"]

[features]
with_ahash = ["ahash"]
unstable_docrs = ["with_ahash"]
weak-table = ["dep:weak-table"]
derive = ["hashconsing-derive"]

[dependencies]
lazy_static = "1.*"
hashconsing-derive = { version = "0.1.0", optional = true, path = "hashconsing_derive" }

[dependencies.ahash]
version = "^0.8.3"
optional = true

[dependencies.weak-table]
version = "^0.3.0"
optional = true

[dev-dependencies]
crossbeam-utils = "^0.8"
rayon = "^1.5"
rand = "0.8"
